[Bug Fix] Navigation menu not showing in mobile screen size

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 .menu {
-  background-color: transparent;
+  background-color: rgb(255,64,129);
   border: none;
   height: 38px;
   margin: 16px;
@@ -36,7 +36,6 @@ md-sidenav{
 }
 
 .site-content-toolbar{
- padding-left: 20px;
  background: #f6f6f6 !important;
  color: #202020 !important;
  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.14), 
@@ -44,6 +43,9 @@ md-sidenav{
             0px 0px 5px 1px rgba(0, 0, 0, 0.084);
 }
 
+h1.md-headline{
+  padding-left: 20px;
+}
 
 .wiki-result-container md-card{
  display: flex;
